@@ -2,3 +2,4 @@
 - Support for text images (created by KWord 0.8 or re-saved by KWord 1.2/1.3)
 - Improved character and paragraph formatting
 - Bookmarks
+- import KWord documents in raw XML
